Mute remaining RuboCop warnings in a todo config.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ require: rubocop-sketchup
 
 inherit_from:
   - https://raw.githubusercontent.com/SketchUp/rubocop-sketchup/master/sketchup-style.yml
+  - .rubocop_todo.yml
 
 AllCops:
   Exclude:
