Copy over some YARD tools from SketchUp's YARD doc setup.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,7 @@ inherit_from:
 AllCops:
   Exclude:
     - src/*/vendor/**/*
+    - yard-tools/**/*
   SketchUp:
     SourcePath: modules
     TargetSketchUpVersion: 2014
