--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -23,6 +23,6 @@ Style/RescueStandardError:
 # Offense count: 1
 # Configuration parameters: AllowHeredoc, AllowURI, URISchemes, IgnoreCopDirectives, IgnoredPatterns.
 # URISchemes: http, https
-Metrics/LineLength:
+Layout/LineLength:
   Exclude:
     - 'modules/c_extension_manager.rb'
